# CausalWorks

./: .gitignore  Cargo.toml  LICENSE  README.md  manifest.example.json  testlog.txt
src/: causal.rs  discovery.rs  hwcapture.rs  ingest.rs  lib.rs  manifest.rs  replay.rs  storage.rs  stream.rs  trace.rs
test_manifests/: bad_budget_manifest.json  cyclic_manifest.json  generous_budget.json  orphan_node.json  tight_budget.json
tests/: e2e_pipeline.rs
